[tool.poetry]
name = "yat-graphql"
version = "0.1.0"
description = "Yat.Money GraphQL API"
authors = ["YZoZ <mail@yzoz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
strawberry-graphql = "^0.126.0"
motor = "^3.0.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
watchfiles = "^0.16.1"
gql = {extras = ["all"], version = "^3.4.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
